Font changes to tagline, buttons, and #newbody. Colors of buttons changed and made uniform. Borders added and made uniform. Invalid login signal moved to avoid appearing behind tagline. On html doc, changed placeholder text—open to debate of course.

--- a/stylesheets/greystyles.css
+++ b/stylesheets/greystyles.css
@@ -3,7 +3,9 @@
 	background-size:cover;
 	-moz-background-size:cover;
 	-webkit-background-size:cover;
-	font-family: 'Calibri';
+	font-family: Book Antiqua;
+	font-style: bold;
+	letter-spacing: 1px;
 	height:100%;
 }
 
@@ -12,7 +14,7 @@
 	background-size:cover;
 	-moz-background-size:cover;
 	-webkit-background-size:cover;
-	font-family: 'Calibri';
+	font-family: Book Antiqua;
 	height:100%;
 	background-color:#A0A0A0;
 }
@@ -67,7 +69,7 @@
 	width:220px;
 	top:55px;
 	padding-bottom:10px;
-	font-family: "Blackletter";
+	font-family: Book Antiqua;
 	position:absolute;
 	text-align:center;
 	border-right:1px solid #000000;
@@ -104,9 +106,11 @@ a.link:visited{
 #mission {
 	position:absolute;
 	left:500px;
-	top:80px;
-	font-size:34px; 
-	font-family: blackout;
+	top:85px;
+	font-size: 26px; 
+	font-family: New;
+	font-style: ;
+	letter-spacing: px;
 	color:#700000;
 }
 
@@ -117,7 +121,7 @@ a.link:visited{
 #recentReviews {
 	background-color:#EEEEEE;
 	padding:10px;
-	border-radius:10px;
+	border-radius:4px;
 	position:absolute;
 	top:265px;
 	left:100px;
@@ -128,9 +132,9 @@ a.link:visited{
 }
 
 #signin {
-	background-color:#CCCCCC;
+	background-color:#700000;
 	padding:10px;
-	border-radius:15px;
+	border-radius:4px;
 	position:absolute;
 	top:110px;
 	left:70%;
@@ -141,7 +145,7 @@ a.link:visited{
 #signup {
 	background-color:#CCCCCC;
 	padding:10px;
-	border-radius:15px;
+	border-radius:4px;
 	position:absolute;
 	top:200px;
 	left:40%;
@@ -151,6 +155,7 @@ a.link:visited{
 
 #signuplabel {
 	font-size:24px;
+	background-color: #CCCCCC;
 }
 
 #signinlabel {
@@ -168,7 +173,7 @@ a.link:visited{
 	float:right;
 	text-decoration:none;
 	position:relative;
-	font:bold 22px 'Trebuchet MS';
+	font:bold 22px Book Antiqua;
 	color:#DD9933;
 	display:inline;
 	margin-top:6px;
@@ -181,9 +186,10 @@ a.link:visited{
 
 #loginerror {
  	position:absolute;
-	left:65%;
-	top:8%;
+	left:87%;
+	top:7%;
 	color:red;
+	font-size: 18px;
 }
 
 #signuperror {
@@ -240,7 +246,7 @@ a.link:visited{
 	border-radius:8px;
 	display:inline-block;
 	color:#ffffff;
-	font-family:Verdana;
+	font-family: Book Antiqua;
 	font-size:14px;
 	height:23px;
 	line-height:14px;
@@ -268,7 +274,7 @@ a.link:visited{
 	border-radius:8px;
 	display:inline-block;
 	color:#ffffff;
-	font-family:Verdana;
+	font-family:Book Antiqua;
 	font-size:14px;
 	height:23px;
 	line-height:14px;
@@ -307,7 +313,7 @@ a.link:visited{
 	border:1px solid #000000;
 	background:#FF0019;
 	color:white;
-	font:bold 14px 'Trebuchet MS';
+	font:bold 14px Book Antiqua;
 	cursor:pointer;
 	-moz-border-radius:4px;
 	-webkit-border-radius:4px
@@ -324,7 +330,7 @@ a.link:visited{
 	border:1px solid #000000;
 	background:#FF0019;
 	color:white;
-	font:bold 14px 'Trebuchet MS';
+	font:bold 14px Book Antiqua;
 	cursor:pointer;
 	-moz-border-radius:2px;
 	-webkit-border-radius:2px;
@@ -435,14 +441,14 @@ p {
 #homebutton {
 	padding-left:3%;
 	text-decoration:none;
-	font:bold 18px 'Trebuchet MS';
+	font:bold 18px Book Antiqua;
 	cursor:pointer;
 	letter-spacing:1.2px;
 	color:#EEAD0E;
 }
 
 #reviewlabel {
-	font: bold 18px 'Trebuchet MS';
+	font: bold 18px Book Antiqua;
 	margin-left:140px;
 }
 
@@ -458,7 +464,7 @@ p {
 }
 
 #artistlabel {
-	font: bold 18px 'Trebuchet MS';
+	font: bold 18px Book Antiqua;
 	margin-left:2%;
 }
 
@@ -481,7 +487,7 @@ p {
 	border-radius:8px;
 	display:inline-block;
 	color:#ffffff;
-	font-family:Verdana;
+	font-family: Book Antiqua;
 	font-size:16px;
 	height:32px;
 	line-height:30px;
@@ -506,7 +512,8 @@ p {
 	border-radius:8px;
 	display:inline-block;
 	color:#ffffff;
-	font-family:Verdana;
+	font-family: Book Antiqua;
+	letter-spacing: 1px;
 	font-size:16px;
 	height:32px;
 	line-height:30px;
@@ -565,7 +572,7 @@ p {
 }
 
 #rateItLabel{
-	font: bold 18px 'Trebuchet MS';
+	font: bold 18px Book Antiqua;
 }
 
 #ratingNumbers{
@@ -678,7 +685,7 @@ p {
 	border-radius:8px;
 	display:inline-block;
 	color:#ffffff;
-	font-family:Verdana;
+	font-family:Book Antiqua;
 	font-size:16px;
 	height:32px;
 	line-height:30px;
@@ -730,7 +737,7 @@ p {
 	border-radius:8px;
 	display:inline-block;
 	color:#ffffff;
-	font-family:Verdana;
+	font-family:Book Antiqua;
 	font-size:16px;
 	height:32px;
 	line-height:30px;
@@ -748,16 +755,18 @@ p {
 #searchbtn {
 	border-style:none;
 	position:relative;
-	top:-5px;
+	top:-2px;
 	margin-top:3px;
 	margin-left:10px;
-	background-color:#E45159;
-	-webkit-border-radius:8px;
-	-moz-border-radius:8px;
-	border-radius:8px;
+	background-color:#700000;
+	border: solid 1px black;
+	-webkit-border-radius:3px;
+	-moz-border-radius:3px;
+	border-radius:3px;
 	color:#ffffff;
-	font-family:Verdana;
-	font-size:14px;
+	font-family: Book Antiqua;
+	letter-spacing: 1px;
+	font-size:20px;
 	height:28px;
 	line-height:24px;
 	text-decoration:none;
@@ -779,7 +788,7 @@ p {
 
 #searchdropdown {
     color: #666666;
-    font-family:Comfortaa, Arial, Helvetica, sans-serif;
+    font-family:Book Antiqua, sans-serif;
     position:relative;
 	top:-5px;
     margin-left:15px;
@@ -802,7 +811,7 @@ p {
 #artistTitle {
 	font-size:36px;
 	text-align:center;
-	font-family: Georgia, serif;
+	font-family: Book Antiqua, serif;
 }
 
 #albumList {
@@ -824,7 +833,7 @@ tr.albumListEntry {
 	background:#EEEEEE;
 	padding-top:10px;
 	font-size:24px;
-	font-family: Georgia, serif;
+	font-family: Book Antiqua, serif;
 	margin:5px;
 }
 
@@ -921,7 +930,7 @@ tr.albumListEntry:hover {
 	-moz-border-radius:8px;
 	border-radius:8px;
 	color:#ffffff;
-	font-family:Verdana;
+	font-family:Book Antiqua;
 	font-size:12px;
 	height:24px;
 	line-height:22px;
@@ -946,7 +955,7 @@ tr.albumListEntry:hover {
 	-moz-border-radius:8px;
 	border-radius:8px;
 	color:#ffffff;
-	font-family:Verdana;
+	font-family:Book Antiqua;
 	font-size:12px;
 	height:24px;
 	line-height:22px;
@@ -1013,12 +1022,13 @@ input:focus,textarea:focus {
 	margin-right:20px;
 	margin-top:5px;
 	float: right;
-	-moz-border-radius: 6px;
-	-webkit-border-radius: 6px;
-	border-style:none;
-	background-color:#42A9FF;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border: solid 1px black;
+	background-color:#700000;
 	color:#FFFFFF;
-	font-family:Verdana;
+	font-family:Book Antiqua;
+	font-size: 20px;
 	text-decoration:none;
 	text-align:center;
 	cursor: pointer;
@@ -1048,6 +1058,7 @@ input:focus,textarea:focus {
 #loginNav #login-content {
   display: none;
   position: absolute;
+  border: solid 1px black;
   top: 32px;
   right: 0;
   z-index: 999;    
@@ -1087,13 +1098,14 @@ input:focus,textarea:focus {
 #login #login_submit {		
 	border-style:none;
 	position:relative;
-	background-color:#E45159;
-	-webkit-border-radius:8px;
-	-moz-border-radius:8px;
-	border-radius:8px;
+	background-color:#42A9FF;
+	border: solid 1px black;
+	-webkit-border-radius:2px;
+	-moz-border-radius:2px;
+	border-radius:2px;
 	color:#ffffff;
-	font-family:Verdana;
-	font-size:14px;
+	font-family:Book Antiqua;
+	font-size:18px;
 	line-height:24px;
 	text-decoration:none;
   	float: right;
@@ -1105,7 +1117,7 @@ input:focus,textarea:focus {
 
 #login #login_submit:hover,
 #login #login_submit:focus {		
-	background-color:#F46169;
+	background-color:#42A9FF;
 }	
 
 #login label {
@@ -1154,7 +1166,7 @@ input:focus,textarea:focus {
 
 .statLabel {
 	font-size:18px;
-	font-family: "Blackletter";
+	font-family: Book Antiqua;
 }
 
 .numberLabel {
